# operator-skeleton

./: README.md  rename.sh
.github/workflows/: publish_dev_artifacts.yml  publish_release_artifacts.yml
deploy/crd/: productnamecluster.crd.yaml  restart.crd.yaml  start.crd.yaml  stop.crd.yaml
docker/: Dockerfile
examples/: restart.command.example.yaml  simple-productname-cluster.yaml  start.command.example.yaml  stop.command.example.yaml
rust/crd/: Cargo.toml
rust/crd/src/: commands.rs  error.rs  lib.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: stackable-productname-operator.rs
rust/operator/src/: lib.rs
