[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for ProductName"
edition = "2018"
license = "OSL-3.0"
name = "stackable-productname-operator-binary"
repository = "https://github.com/stackabletech/productname-operator"
version = "0.1.0-nightly"
build = "build.rs"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-productname-crd = { path = "../crd" }
stackable-productname-operator = { path = "../operator" }

clap = "2.33"
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-productname-crd = { path = "../crd" }

[package.metadata.deb]
name = "stackable-productname-operator"
maintainer-scripts = "../../packaging/debian/"
systemd-units = { enable = false, unit-name = "stackable-productname-operator" }
assets = [
    ["../../target/release/stackable-productname-operator", "opt/stackable/productname-operator/", "755"],
    ["../../deploy/crd/productnamecluster.crd.yaml", "etc/stackable/productname-operator/crd/", "644"],
    ["../../deploy/config-spec/properties.yaml", "etc/stackable/productname-operator/config-spec/", "644"],
]

[[bin]]
name = "stackable-productname-operator"
path = "src/stackable-productname-operator.rs"
